--- a/public/index.html
+++ b/public/index.html
@@ -10,19 +10,19 @@
 <body>
 	<div class="flex h-screen justify-center items-center">
 		<div class="w-10/12 p-10">
-			<!-- <img 
-				src="photo.jpeg"
-				class="rounded-full h-16 w-16 "
-			/> -->
 			<h1 class="mt-6 font-sans text-4xl sm:text-5xl mb-3 font-bold">
 				Sr. Software Engineer
 			</h1>
 			<p 
 				class="mt-6 text-zing-600 leading-2 text-gray-700 mb-4"
 			>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ultricies dignissim lacus vitae tincidunt. Nam porta molestie quam non commodo. Aliquam vel est erat. In at pellentesque lectus, non fermentum odio. Suspendisse porta sodales dolor nec pretium. Aliquam malesuada tincidunt sodales. Proin finibus dignissim nulla sed rhoncus. Nulla faucibus, ante et commodo sollicitudin, elit tellus vehicula mauris, porttitor gravida felis magna ut urna.
+				Hi, I'm Ettore Stark, a software developer with five years of professional experience in back-end and front-end development. My passion for coding began as a teenager, and since then, I have dedicated myself to continuously learning and exploring new technologies and programming languages.
 			</p>
-
+			<p 
+				class="mt-6 text-zing-600 leading-2 text-gray-700 mb-4"
+			>
+				To learn more about me, I invite you to connect with me on my social profiles.
+			</p>
 			<div class="flex mt-6 gap-6">
 				<a href="https://www.linkedin.com/in/ettorestark/" target="_blank">
 					<svg viewBox="0 0 24 24" aria-hidden="true" class="h-6 w-6 fill-zinc-500 hover:fill-zinc-600"><path d="M18.335 18.339H15.67v-4.177c0-.996-.02-2.278-1.39-2.278-1.389 0-1.601 1.084-1.601 2.205v4.25h-2.666V9.75h2.56v1.17h.035c.358-.674 1.228-1.387 2.528-1.387 2.7 0 3.2 1.778 3.2 4.091v4.715zM7.003 8.575a1.546 1.546 0 01-1.548-1.549 1.548 1.548 0 111.547 1.549zm1.336 9.764H5.666V9.75H8.34v8.589zM19.67 3H4.329C3.593 3 3 3.58 3 4.297v15.406C3 20.42 3.594 21 4.328 21h15.338C20.4 21 21 20.42 21 19.703V4.297C21 3.58 20.4 3 19.666 3h.003z"></path></svg>
