Update job description

--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,16 @@
 <body>
 	<div class="flex h-screen justify-center items-center">
 		<div class="w-10/12 p-10">
-			<h1 class="mt-6 font-sans text-4xl sm:text-5xl mb-3 font-bold">
-				Sr. Software Engineer
+			<h1 class="mt-6 font-sans text-4xl sm:text-5xl mb-2 font-bold">
+				Software Engineer 
 			</h1>
+			<h2 class="font-sans text-gray-600 text-4xl sm:text-2xl ">
+				At <a href="https://apple.com" target="_blank">Apple</a> via <a href="https://tcs.com" target="_blank">TCS</a>
+			</h2>
 			<p 
 				class="mt-6 text-zing-600 leading-2 text-gray-700 mb-4"
 			>
-				Hi, I'm Ettore Stark, a software developer with five years of professional experience in back-end and front-end development. My passion for coding began as a teenager, and since then, I have dedicated myself to continuously learning and exploring new technologies and programming languages.
+				Hi , I'm Ettore Stark, a software developer with six years of professional experience in back-end and front-end development. My passion for coding began as a teenager, and since then, I have dedicated myself to continuously learning and exploring new technologies and programming languages.
 			</p>
 			<p 
 				class="mt-6 text-zing-600 leading-2 text-gray-700 mb-4"
