Added intructions to explain how to deploy to github pages

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 			<h1 class="mt-6 font-sans text-4xl sm:text-5xl mb-2 font-bold">
 				Software Engineer 
 			</h1>
-			<h2 class="font-sans text-gray-600 text-4xl sm:text-2xl ">
+			<h2 class="font-sans text-gray-600 text-4xl  sm:text-xl">
 				At <a href="https://apple.com" target="_blank">Apple</a> via <a href="https://tcs.com" target="_blank">TCS</a>
 			</h2>
 			<p 
