--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="flex h-screen justify-center items-center">
-		<div class="w-10/12 p-10">
+		<div class="w-10/12 p-10 sm:p-5">
 			<h1 class="mt-6 font-sans text-4xl sm:text-5xl mb-2 font-bold">
 				Software Engineer 
 			</h1>
